--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,125 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{miller2020discovery,
+  title={Discovery of a New Species of Enigmatic Odd-Scaled Snake (Serpentes: Xenodermidae: Achalinus) from Ha Giang Province, Vietnam},
+  author={Miller, Aryeh H and Davis, Hayden R and Luong, Anh Mai and Do, Quyen Hanh and Pham, Cuong The and Ziegler, Thomas and Lee, Justin L and De Queiroz, Kevin and Reynolds, R Graham and Nguyen, Truong Quang},
+  journal={Copeia},
+  volume={108},
+  number={4},
+  pages={796--808},
+  year={2020},
+  publisher={The American Society of Ichthyologists and Herpetologists}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{lee2018rediscovery,
+  title={Rediscovery of Xenochrophis bellulus (Stoliczka, 1871) from Myanmar (Serpentes: Natricinae) with comments on its taxonomic status},
+  author={Lee, Justin L and Vogel, Gernot and Miller, Aryeh H and Zug, George R},
+  journal={Proceedings of the Biological Society of Washington},
+  volume={131},
+  number={1},
+  pages={19--35},
+  year={2018},
+  publisher={Biological Society of Washington}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
+@article{lee2018first,
+  title={First record of the Malaysian Bridle Snake, Dryocalamus subannulatus (Dum{\'e}ril, Bibron \& Dum{\'e}ril, 1854), in Myanmar (Reptilia, Serpentes, Colubridae)},
+  author={Lee, Justin L and Miller, Aryeh H and Connette, Grant M and Oo, Khin Swe and Zug, George R and Mulcahy, Daniel G},
+  journal={Check List},
+  volume={14},
+  pages={341},
+  year={2018},
+  publisher={Pensoft Publishers}
+}
+
+@article{miller2016morphology,
+  title={Morphology and biology of the Asian Common Mockviper, Psammodynastes pulverulentus (Boie, 1827)(Serpentes: Lamprophiidae): a focus on Burmese populations},
+  author={Miller, Aryeh H and Zug, George R},
+  journal={Proceedings of the Biological Society of Washington},
+  volume={129},
+  number={1},
+  pages={173--194},
+  year={2016},
+  publisher={Biological Society of Washington}
+}
+
+@article{mulcahy2018filling,
+  title={Filling the BINs of life: report of an amphibian and reptile survey of the Tanintharyi (Tenasserim) Region of Myanmar, with DNA barcode data},
+  author={Mulcahy, Daniel G and Lee, Justin L and Miller, Aryeh H and Chand, Mia and Thura, Myint Kyaw and Zug, George R},
+  journal={ZooKeys},
+  number={757},
+  pages={85},
+  year={2018},
+  publisher={Pensoft Publishers}
+}
+
+@article{lee2019discovery,
+  title={The discovery of Rock Geckos Cnemaspis Strauch, 1887 (Squamata: Gekkonidae) in the Tanintharyi Region, Myanmar with the description of two new species},
+  author={Lee, Justin L and Miller, Aryeh H and Zug, George R and Mulcahy, Daniel G},
+  journal={Zootaxa},
+  volume={4661},
+  number={1},
+  pages={40--64},
+  year={2019}
+}
+
+@article{freitas2020taxonomic,
+  title={A taxonomic conundrum: Characterizing a cryptic radiation of Asian gracile skinks (Squamata: Scincidae: Riopa) in Myanmar},
+  author={Freitas, Elyse S and Miller, Aryeh H and Reynolds, R Graham and Siler, Cameron D},
+  journal={Molecular phylogenetics and evolution},
+  volume={146},
+  pages={106754},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{mulcahy2017troublesome,
+  title={Troublesome trimes: potential cryptic speciation of the Trimeresurus (Popeia) popeiorum complex (Serpentes: Crotalidae) around the Isthmus of Kra (Myanmar and Thailand)},
+  author={Mulcahy, Daniel G and Lee, Justin L and Miller, Aryeh H and Zug, George R},
+  journal={Zootaxa},
+  volume={4347},
+  number={2},
+  pages={301--315},
+  year={2017}
+}
+
+@article{miller2016enigmatic,
+  title={An enigmatic Lygosoma (Reptilia: Squamata: Scincidae) from northern Myanmar},
+  author={Miller, ARYEH H and Zug, GEORGE R},
+  journal={Herpetological Review},
   volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+  number={3},
+  pages={373--374},
+  year={2016}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{reynolds2021molecular,
+  title={Molecular phylogeny of Puerto Rico Bank dwarf geckos (Squamata: Sphaerodactylidae: Sphaerodactylus)},
+  author={Reynolds, Robert G and Miller, Aryeh H and Revell, Liam J and RIOS-FRANCESCHI, ALEJANDRO and Huffine, Clair A and Fredette, Jason and Angeli, Nicole F and VEGA-CASTILLO, Sondra I and Puente-Rol{\'o}n, Alberto R},
+  journal={bioRxiv},
+  year={2021},
+  publisher={Cold Spring Harbor Laboratory}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{miller2021phylogeny,
+  title={Phylogeny, Diversity, and Distribution of Micryletta (Anura: Microhylidae) in Myanmar},
+  author={Miller, Aryeh H and Zug, George R and Wogan, Guinevere OU and Lee, Justin L and Mulcahy, Daniel G},
+  journal={Ichthyology \& Herpetology},
+  volume={109},
+  number={1},
+  pages={245--257},
+  year={2021},
+  publisher={The American Society of Ichthyologists and Herpetologists}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{miller2022novel,
+  title={Novel tests of the key innovation hypothesis: Adhesive toepads in arboreal lizards},
+  author={Miller, Aryeh H and Stroud, James T},
+  journal={Systematic Biology},
+  volume={71},
+  number={1},
+  pages={139--152},
+  year={2022},
+  publisher={Oxford University Press}
 }
