--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,9 @@
   number={4},
   pages={796--808},
   year={2020},
-  publisher={The American Society of Ichthyologists and Herpetologists}
+  publisher={The American Society of Ichthyologists and Herpetologists},
+  url = {https://doi.org/10.1643/CH2020060},
+  html = {https://bioone.org/journals/copeia/volume-108/issue-4/CH2020060/Discovery-of-a-New-Species-of-Enigmatic-Odd-Scaled-Snake/10.1643/CH2020060.full},
 }
 
 @article{lee2018rediscovery,
