--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,8 +10,8 @@
   pages={796--808},
   year={2020},
   publisher={The American Society of Ichthyologists and Herpetologists},
-  url = {https://doi.org/10.1643/CH2020060},
-  html = {https://bioone.org/journals/copeia/volume-108/issue-4/CH2020060/Discovery-of-a-New-Species-of-Enigmatic-Odd-Scaled-Snake/10.1643/CH2020060.full},
+  url={https://doi.org/10.1643/CH2020060},
+  html={https://bioone.org/journals/copeia/volume-108/issue-4/CH2020060/Discovery-of-a-New-Species-of-Enigmatic-Odd-Scaled-Snake/10.1643/CH2020060.full}
 }
 
 @article{lee2018rediscovery,
@@ -123,6 +123,7 @@
   number={1},
   pages={139--152},
   year={2022},
+  html={https://academic.oup.com/sysbio/article/71/1/139/6295694},
   impactfactor={15.683},
   publisher={Oxford University Press}
 }
