--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
   url="https://doi.org/10.1643/CH2020060",
   html="https://bioone.org/journals/copeia/volume-108/issue-4/CH2020060/Discovery-of-a-New-Species-of-Enigmatic-Odd-Scaled-Snake/10.1643/CH2020060.full",
   pdf="https://bioone.org/journalArticle/Download?urlId=10.1643%2FCH2020060",
-  abstract="Achalinus, commonly known as odd-scaled snakes due to their unique scutellation, are a fascinating group of xenodermid snakes distributed throughout east Asia. Currently, northern Vietnam is known to host six species of Achalinus, three of which are considered endemic. During recent herpetofaunal surveys conducted in the Bac Me District of Ha Giang Province, we collected a single specimen of Achalinus in a lowland region surrounded by secondary forest on karst. We conducted Bayesian and maximum likelihood phylogenetic analyses using multiple mitochondrial protein-coding loci and a ribosomal subunit to ascertain the phylogenetic position of the Ha Giang specimen among currently recognized odd-scaled snake species. The results of those analyses along with morphological differences support this specimen as representing a new species, which we describe as Achalinus zugorum, new species. We provide detailed morphological descriptions and comparisons of the new species as well as brief comments on the biogeography and conservation of Achalinus in northern Vietnam."
+  abstract="Achalinus, commonly known as odd-scaled snakes due to their unique scutellation, are a fascinating group of xenodermid snakes distributed throughout east Asia. Currently, northern Vietnam is known to host six species of Achalinus, three of which are considered endemic. During recent herpetofaunal surveys conducted in the Bac Me District of Ha Giang Province, we collected a single specimen of Achalinus in a lowland region surrounded by secondary forest on karst. We conducted Bayesian and maximum likelihood phylogenetic analyses using multiple mitochondrial protein-coding loci and a ribosomal subunit to ascertain the phylogenetic position of the Ha Giang specimen among currently recognized odd-scaled snake species. The results of those analyses along with morphological differences support this specimen as representing a new species, which we describe as Achalinus zugorum, new species. We provide detailed morphological descriptions and comparisons of the new species as well as brief comments on the biogeography and conservation of Achalinus in northern Vietnam.",
 }
 
 @article{lee2018rediscovery,
