--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -130,3 +130,13 @@
   impactfactor={15.683},
   publisher={Oxford University Press}
 }
+
+@article{Milleretal2022,
+  title={The ecology and evolution of key innovations},
+  author={Miller, Aryeh H., Stroud, James T., Losos, Jonathan B.},
+  volume={00},
+  number={00},
+  pages={00},
+  year={Submitted},
+  selected={true}
+}
