--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -132,6 +132,7 @@
 }
 
 @article{Milleretal2022,
+  abbr={In Review}
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H., Stroud, James T., Losos, Jonathan B.},
   volume={00},
