--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,7 @@
 @article{lee2018rediscovery,
   title={Rediscovery of Xenochrophis bellulus (Stoliczka, 1871) from Myanmar (Serpentes: Natricinae) with comments on its taxonomic status},
   author={Lee, Justin L and Vogel, Gernot and Miller, Aryeh H and Zug, George R},
+  abstract={Xenochrophis bellulus (Stolickza, 1871) was described as Tropidonotus bellulus based on a single specimen collected from Myanmar in the late 19th century. Since then the holotype has been lost, and the species has been transferred to several genera in the subfamily Natricinae including Natrix, Sinonatrix and finally Xenochrophis based on one museum specimen matching the original description. Herpetofaunal surveys of the Moyingyi Wildlife Sanctuary and vicinity, Bago Region, Myanmar revealed three individuals obtained in 2001 and 2003 that match the type description of X. bellulus. This small series of newly collected specimens allows us to redescribe this species based on all known material, provide a description of the hemipenis, designate a neotype and comment on its taxonomic status.},
   journal={Proceedings of the Biological Society of Washington},
   volume={131},
   number={1},
@@ -31,6 +32,7 @@
 @article{lee2018first,
   title={First record of the Malaysian Bridle Snake, Dryocalamus subannulatus (Dum{\'e}ril, Bibron \& Dum{\'e}ril, 1854), in Myanmar (Reptilia, Serpentes, Colubridae)},
   author={Lee, Justin L and Miller, Aryeh H and Connette, Grant M and Oo, Khin Swe and Zug, George R and Mulcahy, Daniel G},
+  abstract={Dryocalamus subannulatus is reported for the first time from Myanmar. A single individual was found on the Thay- awthadangyi Island Group in the Myeik Archipelago, Tanintharyi Region. Morphological features and a maximum likelihood analysis of the 16S mitochondrial gene confirm its identity. This specimen represents the first record of D. subannulatus north of the Isthmus of Kra.},
   journal={Check List},
   volume={14},
   pages={341},
@@ -41,6 +43,7 @@
 @article{miller2016morphology,
   title={Morphology and biology of the Asian Common Mockviper, Psammodynastes pulverulentus (Boie, 1827)(Serpentes: Lamprophiidae): a focus on Burmese populations},
   author={Miller, Aryeh H and Zug, George R},
+  abstract={Psammodynastes pulverulentus occurs widely and is moderately abundant in the forests of Myanmar. The species shows morphological uniformity throughout its distribution from Kachin-Sagaing to Tanintharyi. Although there are no size differences among adult females (mean¼326, 253–436 mm SVL) and males (322, 222–471 mm SVL), a few morphological features are sexually dimorphic: adult females have shorter tails than adult males (TailL/TotL means // 17%, ?? 20%) and relative head width and eye diameter are slightly larger in males. The number of ventral and subcaudal scales are only slightly different between females and males (median ventral, // 158.5, ?? 159; subcaudals, 54, 59.5, although significantly different). Our smaller Thai sample displayed the same pattern of variation in measurements and scalation as the Burmese sample. We developed a coding scheme for coloration and qualitatively demonstrate dimorphism in the Burmese sample; females are darker ventrally than males but females and males are the same dorsally. Other coloration traits are also dimorphic. In our Burmese sample, the number of adult males (n ¼ 21) outnumbered females (18). Adult females were most abundant in the 251–300 mm SVL size class, males of near equal abundance in 201–250, 251–300, and 301– 350 mm size classes. Relative to other Burmese snakes, P. pulverulentus ranked eighth in abundance, nearly equal number in frequency of occurrence with Dendrelaphis pictus. Our reproductive data do not clearly define reproductive periodicity and, based on large vitellogenic follicles, a likely clutch/litter size of 4 to 7. Although only 30% of our sample contained identifiable prey (frogs, lizards), most (67%) had digestive boluses in the lower half of the intestinal tract. Skinks were the dominant lizard prey and Limnonectes the dominant anurans. Uniformity or at least low differentiation between our Burmese and Thai samples and the results of Rasmussen (1975) advocate for the continued acceptance of the pan-Asian species concept for Psammodynastes pulverulentus.},
   journal={Proceedings of the Biological Society of Washington},
   volume={129},
   number={1},
@@ -52,6 +55,7 @@
 @article{mulcahy2018filling,
   title={Filling the BINs of life: report of an amphibian and reptile survey of the Tanintharyi (Tenasserim) Region of Myanmar, with DNA barcode data},
   author={Mulcahy, Daniel G and Lee, Justin L and Miller, Aryeh H and Chand, Mia and Thura, Myint Kyaw and Zug, George R},
+  abstract={Despite threats of species extinctions, taxonomic crises, and technological advances in genomics and natural history database informatics, we are still distant from cataloguing all of the species of life on earth. Amphibians and reptiles are no exceptions; in fact new species are described nearly every day and many species face possible extinction. The number of described species continues to climb as new areas of the world are explored and as species complexes are examined more thoroughly. The use of DNA barcoding provides a mechanism for rapidly estimating the number of species at a given site and has the potential to record all of the species of life on Earth. Though DNA barcoding has its caveats, it can be useful to estimate the number of species in a more systematic and efficient manner, to be followed in combination with more traditional, morphology-based identifications and species descriptions. Herein, we report the results of a voucher-based herpetological expedition to the Tanintharyi (Tenasserim) Region of Myanmar, enhanced with DNA barcode data. Our main surveys took place in the currently proposed Tanintharyi National Park. We combine our results with photographs and observational data from the Chaung-nauk-pyan forest reserve. Additionally, we provide the first checklist of amphibians and reptiles of the region, with species based on the literature and museum. Amphibians, anurans in particular, are one of the most poorly known groups of vertebrates in terms of taxonomy and the number of known species, particularly in Southeast Asia. Our rapid-assessment program combined with DNA barcoding and use of Barcode Index Numbers (BINs) of voucher specimens reveals the depth of taxonomic diversity in the southern Tanintharyi herpetofauna even though only a third of the potential amphibians and reptiles were seen. A total of 51 putative species (one caecilian, 25 frogs, 13 lizards, 10 snakes, and two turtles) were detected, several of which represent potentially undescribed species. Several of these species were detected by DNA barcode data alone. Furthermore, five species were recorded for the first time in Myanmar, two amphibians (Ichthyophis cf. kohtaoensis and Chalcorana eschatia) and three snakes (Ahaetulla mycterizans, Boiga dendrophila, and Boiga drapiezii).},
   journal={ZooKeys},
   number={757},
   pages={85},
@@ -62,6 +66,7 @@
 @article{lee2019discovery,
   title={The discovery of Rock Geckos Cnemaspis Strauch, 1887 (Squamata: Gekkonidae) in the Tanintharyi Region, Myanmar with the description of two new species},
   author={Lee, Justin L and Miller, Aryeh H and Zug, George R and Mulcahy, Daniel G},
+  abstract={We report the first occurrence of the Asian Rock Gecko genus Cnemaspis Strauch, 1887 from mainland Myanmar based on a series of specimens recently collected from the Tanintharyi Region. These records come from several localities in the Tanintharyi Region and fill a significant sampling gap for the genus. Molecular phylogenetic analyses using the mitochondrial gene ND2 identify two distinct clades, the first includes Cnemaspis siamensis of the Southeast Asian Cnemaspis group and the second includes two new species belonging to the South Asian Cnemaspis kandiana group. These two species are morphologically distinct and are distinguished from all other members in the C. kandiana group by a combination of character states. The first species, Cnemaspis tanintharyi sp. nov. occurs on the mainland in southern Tanintharyi and is distinguished from all congeners by the possession of keeled pectoral scales; smooth ventral scales and abdominal scales; 2–4 precloacal pores; 4–5 femoral pores on each leg; smooth subcaudal scales with the median row enlarged; coloration of the gular region beige, dark gray-brown with dark blue hueing towards throat; 15–18 subdigital lamellae on the 4th toe; and 21–23 ventral scales at midbody. The other, Cnemaspis thayawthadangyi sp. nov. is known only from the island group of Thayawthadangyi, in the Myeik Archipelago and is distinguished from all congeners by the possession of keeled pectoral scales; keeled ventral scales and abdominal scales; three precloacal pores; four femoral pores on each leg; smooth subcaudal scales, scales on median row enlarged; coloration of the gular region silver with dark-gray irregularly shaped streaks; 16–18 subdigital lamellae on the 4th toe; and 18–20 ventral scales at midbody. In addition, we address the taxonomic status of populations referred to as C. kandiana (a species now restricted to Sri Lanka) found in peninsular Thailand and provisionally assign them as C. cf. tanintharyi sp. nov. until further analysis can be conducted. Finally, we briefly discuss the biogeography of the South Asian clade of Cnemaspis.},
   journal={Zootaxa},
   volume={4661},
   number={1},
@@ -72,6 +77,7 @@
 @article{freitas2020taxonomic,
   title={A taxonomic conundrum: Characterizing a cryptic radiation of Asian gracile skinks (Squamata: Scincidae: Riopa) in Myanmar},
   author={Freitas, Elyse S and Miller, Aryeh H and Reynolds, R Graham and Siler, Cameron D},
+  abstract={Recognizing species-level diversity is important for studying evolutionary patterns across biological disciplines and is critical for conservation efforts. However, challenges remain in delimiting species-level diversity, especially in cryptic radiations where species are genetically divergent but show little morphological differentiation. Using multilocus molecular data, phylogenetic analyses, species delimitation analyses, and morphological data, we examine lineage diversification in a cryptic radiation of Riopa skinks in Myanmar. Four species of Riopa skinks are currently recognized from Myanmar based on morphological traits, but the boundaries between three of these species, R. anguina, R. lineolata, and R. popae, are not well-defined. We find high levels of genetic diversity within these three species. Our analyses suggest that they may comprise as many as 12 independently evolving lineages, highlighting the extent to which species diversity in the region is underestimated. However, quantitative trait data suggest that these lineages have not differentiated morphologically, possibly indicating that this cryptic radiation represents non-adaptive evolution, although additional data is needed to corroborate this.},
   journal={Molecular phylogenetics and evolution},
   volume={146},
   pages={106754},
@@ -82,6 +88,7 @@
 @article{mulcahy2017troublesome,
   title={Troublesome trimes: potential cryptic speciation of the Trimeresurus (Popeia) popeiorum complex (Serpentes: Crotalidae) around the Isthmus of Kra (Myanmar and Thailand)},
   author={Mulcahy, Daniel G and Lee, Justin L and Miller, Aryeh H and Zug, George R},
+  abstract={The taxonomic identity of the Trimeresurus (Popeia) popeiorum complex from the Isthmus of Kra and to the north was investigated. Several studies over the last decade have produced several specimens and associated mtDNA sequence data for a variety of individuals of the T. popeiorum and “T. sabahi” complexes. Here, we combine four mitochondrial genes (12S, 16S, ND4, and CytB) from all available specimens in GenBank with the addition of five new specimens collected from the mainland, Tanintharyi Region of Myanmar. Maximum Likelihood and Bayesian analyses identified that T. popeiorum sensu lato is paraphyletic with two geographically distinct clades: a northern clade representing populations from northern Myanmar, Laos and northern Thailand and a southern clade representing samples from the Tanintharyi Region and adjacent west Thailand. While the two clades have considerable genetic distance, they appear to be morphologically identical, leading to the hypothesis that the southern clade represents a cryptic, undescribed species. Because they appear to be cryptic species and the limitation of only five specimens from the southern lineage, this does not permit us to formally describe the new species. In accordance to past molecular studies, we uncovered paraphyly and lack of genetic support for the validity of taxa within the T. sabahi complex. However, we suggest recognizing these populations as subspecies within T. sabahi.},
   journal={Zootaxa},
   volume={4347},
   number={2},
@@ -110,6 +117,7 @@
 @article{miller2021phylogeny,
   title={Phylogeny, Diversity, and Distribution of Micryletta (Anura: Microhylidae) in Myanmar},
   author={Miller, Aryeh H and Zug, George R and Wogan, Guinevere OU and Lee, Justin L and Mulcahy, Daniel G},
+  abstract={The microhylid genus Micryletta, often called Paddy Frogs, is a taxonomically modest group of frogs currently comprised of eight species distributed across India, China, and Southeast Asia. None of the recent investigations into this group have explicitly focused on the diversity of these frogs in Myanmar, a critically undersampled region previously thought to contain only one species of Micryletta, M. inornata. Recent field expeditions to Myanmar conducted by the authors have resulted in the discovery of numerous populations of Micryletta in the northern and southern portions of the country in Kachin State and Tanintharyi Region, respectively. In this study, we investigate the status of these populations, their taxonomic identities, and broadly assess the diversity of this enigmatic group of frogs in Myanmar. Using comparative morphological and molecular data, we find the diversity of Micryletta in Myanmar has been poorly appreciated, which we demonstrate with the discovery of M. aishani, a species previously only known from neighboring India, and M. lineata, a species originally described from Peninsular Thailand. Our investigation into the taxonomic status of M. lineata demonstrates the validity in the recognition of this species, which is supported with evidence derived from morphology, geography, and molecular data. We additionally provide a detailed re-description of this species based on novel specimens from southern Myanmar. We also document M. inornata sensu stricto in Myanmar, sympatric with M. lineata, bringing the total to three species of Micryletta occurring in Myanmar.},
   journal={Ichthyology \& Herpetology},
   volume={109},
   number={1},
@@ -121,6 +129,7 @@
 @article{miller2022novel,
   title={Novel tests of the key innovation hypothesis: Adhesive toepads in arboreal lizards},
   author={Miller, Aryeh H and Stroud, James T},
+  abstract={The evolution of key innovations—unique features that enable a lineage to interact with the environment in a novel way—may drive broad patterns of adaptive diversity. However, traditional tests of the key innovation hypothesis, those which attempt to identify the evolutionary effect of a purported key innovation by comparing patterns of diversity between lineages with and without the key trait, have been challenged on both conceptual and statistical grounds. Here, we explore alternative, untested hypotheses of the key innovation framework. In lizards, adhesive toepad structures increase grip strength on vertical and smooth surfaces such as tree trunks and leaves and have independently evolved multiple times. As such, toepads have been posited as a key innovation for the evolution of arboreality. Leveraging a habitat use data set applied to a global phylogeny of 2692 lizard species, we estimated multiple origins of toepads in three major clades and more than 100 origins of arboreality widely across the phylogeny. Our results suggest that toepads arise adaptively in arboreal lineages and are subsequently rarely lost while maintaining arboreal ecologies. Padless lineages transition away from arboreality at a higher rate than those with toepads, and high rates of invasion of arboreal niches by nonarboreal padbearing lineages provide further evidence that toepads may be a key to unlocking evolutionary access to the arboreal zone. Our results and analytical framework provide novel insights to understand and evaluate the ecological and evolutionary consequences of key innovations.[Arboreality; ecological transition; key innovation; macroevolution; phylogenetic comparative methods.]},
   journal={Systematic Biology},
   volume={71},
   number={1},
