--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -141,3 +141,9 @@
   publisher={Oxford University Press}
 }
 
+@article{millerKIs,
+  abbr={In review},
+  title={The ecology and evolution of key innovations},
+  author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
+  year={2022},
+}
