--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -146,4 +146,15 @@
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
   year={2022},
-}
+  
+@article{Cyclura,
+  abbr={In revision},
+  title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
+  author={Reynolds, R. G. and Miller, A.H. and Pasachnik, S.A. and Knapp, C.R. and Welch, M.E. and Colisimo, G. and Gerber, G.P. and Drawert, B., and Iverson, J.B.},
+  year={2022},
+  
+@article{ClimateLizards,
+  abbr={In revision},
+  title={Climatic constraints and the latitudinal diversity gradient: Why are arboreal lizards a tropical phenomenon?},
+  author={Stroud, J.T. and Swiston, S. and Miller, A.H.}
+  year={2022}, 
