--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -141,20 +141,41 @@
   publisher={Oxford University Press}
 }
 
+@article{SpatialEcology,
+  abbr={In prep},
+  title={Spatial ecology of the Turks and Caicos Boa, Chilabothrus c. chrysogaster (Cope 1871) (Serpentes: Boidae) on Ambergris Cay, Turks and Caicos.},
+  author={Reynolds, R. Graham and Reger, Molly E. and Peek, Keeley J. and Raphael, Bonnie and Colosimo, Giuliano and Miller, Aryeh H. and Vanerelli, Alyssa A. and Gerber, Glenn P.},
+  year={In Prep},
+}
+
 @article{millerKIs,
-  abbr={In review},
+  abbr={InrReview},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
-  year={2022},
+  year={In review},
+  
+@article{Vanerelli2022mitoB,
+  abbr={MitoDNA B},
+  title={Mitochrondrial Genome of the Critically Endangered Silver Boa (Chilabothrus argentum:Squamata:Boidae)},
+  author={Vanerelli, Alyssa A. and Miller, Aryeh H. and Comsa, L. Caden and Geneva, Anthony J. and Reynolds, R. Graham},
+  volume={00},
+  number={00},
+  pages={00},
+  year={Submitted},
+  selected={true}
+}
   
 @article{Cyclura,
   abbr={In revision},
   title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
   author={Reynolds, R. G. and Miller, A.H. and Pasachnik, S.A. and Knapp, C.R. and Welch, M.E. and Colisimo, G. and Gerber, G.P. and Drawert, B., and Iverson, J.B.},
-  year={2022},
-  
+  year={In revision}
+ }
+
 @article{ClimateLizards,
   abbr={In revision},
   title={Climatic constraints and the latitudinal diversity gradient: Why are arboreal lizards a tropical phenomenon?},
   author={Stroud, J.T. and Swiston, S. and Miller, A.H.}
-  year={2022}, 
+  year={In revision}
+  }
+
