--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -149,13 +149,13 @@
 }
 
 @article{millerKIs,
-  abbr={InrReview},
+  abbr={In review},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
   year={In review},
   
 @article{Vanerelli2022mitoB,
-  abbr={MitoDNA B},
+  abbr={In review},
   title={Mitochrondrial Genome of the Critically Endangered Silver Boa (Chilabothrus argentum:Squamata:Boidae)},
   author={Vanerelli, Alyssa A. and Miller, Aryeh H. and Comsa, L. Caden and Geneva, Anthony J. and Reynolds, R. Graham},
   volume={00},
