--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,6 +94,7 @@
   number={2},
   pages={301--315},
   year={2017}
+  html={https://www.mapress.com/zt/article/view/zootaxa.4347.2.6}
 }
 
 @article{miller2016enigmatic,
@@ -111,6 +112,7 @@
   author={Reynolds, Robert G and Miller, Aryeh H and Revell, Liam J and RIOS-FRANCESCHI, ALEJANDRO and Huffine, Clair A and Fredette, Jason and Angeli, Nicole F and VEGA-CASTILLO, Sondra I and Puente-Rol{\'o}n, Alberto R},
   journal={bioRxiv},
   year={2021},
+  html={https://www.biorxiv.org/content/10.1101/2021.03.23.436310v1},
   publisher={Cold Spring Harbor Laboratory}
 }
 
@@ -123,6 +125,7 @@
   number={1},
   pages={245--257},
   year={2021},
+  html={https://meridian.allenpress.com/copeia/article/109/1/245/464854/Phylogeny-Diversity-and-Distribution-of-Micryletta},
   publisher={The American Society of Ichthyologists and Herpetologists}
 }
 
