--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -144,12 +144,17 @@
   publisher={Oxford University Press}
 }
 
-@article{SpatialEcology,
-  abbr={In prep},
-  title={Spatial ecology of the Turks and Caicos Boa, Chilabothrus c. chrysogaster (Cope 1871) (Serpentes: Boidae) on Ambergris Cay, Turks and Caicos.},
-  author={Reynolds, R. Graham and Reger, Molly E. and Peek, Keeley J. and Raphael, Bonnie and Colosimo, Giuliano and Miller, Aryeh H. and Vanerelli, Alyssa A. and Gerber, Glenn P.},
-  year={In Prep},
-}
+@article{Cyclura,
+  abbr={In press},
+  title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
+  author={Reynolds, R. G. and **Miller, A.H.** and Pasachnik, S.A. and Knapp, C.R. and Welch, M.E. and Colisimo, G. and Gerber, G.P. and Drawert, B., and Iverson, J.B.},
+  volume={00},
+  number={0},
+  pages={000--000},
+  year={2022},
+  impactfactor={4.286},
+  publishe{Elsevier}
+ }
 
 @article{millerKIs,
   abbr={In review},
@@ -169,17 +174,4 @@
   selected={true}
 }
   
-@article{Cyclura,
-  abbr={In revision},
-  title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
-  author={Reynolds, R. G. and Miller, A.H. and Pasachnik, S.A. and Knapp, C.R. and Welch, M.E. and Colisimo, G. and Gerber, G.P. and Drawert, B., and Iverson, J.B.},
-  year={In revision}
- }
-
-@article{ClimateLizards,
-  abbr={In revision},
-  title={Climatic constraints and the latitudinal diversity gradient: Why are arboreal lizards a tropical phenomenon?},
-  author={Stroud, J.T. and Swiston, S. and Miller, A.H.}
-  year={In revision}
-  }
 
