--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -147,7 +147,7 @@
 @article{Cyclura,
   abbr={In press},
   title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
-  author={Reynolds, R. G. and **Miller, A.H.** and Pasachnik, S.A. and Knapp, C.R. and Welch, M.E. and Colisimo, G. and Gerber, G.P. and Drawert, B., and Iverson, J.B.},
+  author={Reynolds, RG and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, CR and Welch, ME and Colisimo, G and Gerber, GP and Drawert, B and Iverson, JB},
   journal={Molecular Phylogenetics and Evolution},
   volume={00},
   number={0},
