--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -144,35 +144,17 @@
   publisher={Oxford University Press}
 }
 
-@article{Cyclura,
-  abbr={In press},
-  title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas(genus _Cyclura_)},
-  author={Reynolds, RG and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, CR and Welch, ME and Colisimo, G and Gerber, GP and Drawert, B and Iverson, JB},
-  journal={Molecular Phylogenetics and Evolution},
-  volume={00},
-  number={0},
-  pages={000--000},
-  year={2022},
-  impactfactor={4.286},
-  publishe{Elsevier}
- }
-
-@article{millerKIs,
-  abbr={In review},
-  title={The ecology and evolution of key innovations},
-  author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
-  year={In review},
-}
-  
-@article{Vanerelli2022mitoB,
-  abbr={In review},
-  title={Mitochrondrial Genome of the Critically Endangered Silver Boa (Chilabothrus argentum:Squamata:Boidae)},
-  author={Vanerelli, Alyssa A. and Miller, Aryeh H. and Comsa, L. Caden and Geneva, Anthony J. and Reynolds, R. Graham},
-  volume={00},
-  number={00},
-  pages={00},
-  year={Submitted},
-  selected={true}
+@article{GRAHAMREYNOLDS2022107548,
+title = {Phylogenomics and Historical Biogeography of West Indian Rock Iguanas (genus Cyclura)},
+journal = {Molecular Phylogenetics and Evolution},
+pages = {107548},
+year = {2022},
+issn = {1055-7903},
+doi = {https://doi.org/10.1016/j.ympev.2022.107548},
+url = {https://www.sciencedirect.com/science/article/pii/S1055790322001610},
+author = {R. {Graham Reynolds} and Aryeh H. Miller and Stesha A. Pasachnik and Charles R. Knapp and Mark E. Welch and Giuliano Colosimo and Glenn P. Gerber and Brian Drawert and John B. Iverson},
+keywords = {biogeography, Caribbean, conservation, genomics, mitogenome, Ultraconserved elements},
+abstract = {The genus Cyclura includes nine extant species and six subspecies of West Indian Rock Iguanas and is one of the most imperiled genera of squamate reptiles globally. An understanding of species diversity, evolutionary relationships, diversification, and historical biogeography in this group is crucial for implementing sound long-term conservation strategies. We collected DNA samples from 1–10 individuals per taxon from all Cyclura taxa (n = 70 ingroup individuals), focusing where possible on incorporating individuals from different populations of each species. We also collected 1–2 individuals from each of seven outgroup species of iguanas (Iguana delicatissima; five Ctenosaura species) and Anolis sagrei (n = 12 outgroup individuals). We used targeted genomic sequence capture to isolate and to sequence 1,872 loci comprising of 687,308 base pairs (bp) from each of the 82 individuals from across the nuclear genome. We extracted mitochondrial reads and assembled and annotated mitogenomes for all Cyclura taxa plus outgroup species. We present well-supported phylogenomic gene tree/species tree analyses for all extant species of Cyclura using ASTRAL-III, SVDQuartets, and starBEAST methods, and discuss the taxonomic, biogeographic, and conservation implications of these data. We find a most recent common ancestor of the genus 9.91 million years ago. The earliest divergence within Cyclura separates C. pinguis from a clade comprising all other Cyclura. Within the latter group, a clade comprising C. carinata from the southern Lucayan Islands and C. ricordii from Hispaniola is the sister taxon to a clade comprising the other Cyclura. Among the other Cyclura, the species C. cornuta and C. stejnegeri (from Hispaniola and Isla Mona) form the sister taxon to a clade of species from Jamaica (C. collei), Cuba and Cayman Islands (C. nubila and C. lewisi), and the eastern (C. rileyi) and western (C. cychlura) Lucayan Islands. Cyclura cychlura and C. rileyi form a clade whose sister taxa are C. nubila and C. lewisi. Cyclura collei is the sister taxon to these three species combined.}
 }
   
 
