--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -145,6 +145,7 @@
 }
 
 @article{reynolds2022phylogenomics,
+  abbr={MP&E},
   title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas (genus Cyclura)},
   author={Reynolds, R Graham and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, Charles R and Welch, Mark E and Colosimo, Giuliano and Gerber, Glenn P and Drawert, Brian and Iverson, John B},
   journal={Molecular Phylogenetics and Evolution},
