--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -148,8 +148,13 @@
   abbr={MP&E},
   title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas (genus Cyclura)},
   author={Reynolds, R Graham and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, Charles R and Welch, Mark E and Colosimo, Giuliano and Gerber, Glenn P and Drawert, Brian and Iverson, John B},
+  abstract={The evolution of key innovations—unique features that enable a lineage to interact with the environment in a novel way—may drive broad patterns of adaptive diversity. However, traditional tests of the key innovation hypothesis, those which attempt to identify the evolutionary effect of a purported key innovation by comparing patterns of diversity between lineages with and without the key trait, have been challenged on both conceptual and statistical grounds. Here, we explore alternative, untested hypotheses of the key innovation framework. In lizards, adhesive toepad structures increase grip strength on vertical and smooth surfaces such as tree trunks and leaves and have independently evolved multiple times. As such, toepads have been posited as a key innovation for the evolution of arboreality. Leveraging a habitat use data set applied to a global phylogeny of 2692 lizard species, we estimated multiple origins of toepads in three major clades and more than 100 origins of arboreality widely across the phylogeny. Our results suggest that toepads arise adaptively in arboreal lineages and are subsequently rarely lost while maintaining arboreal ecologies. Padless lineages transition away from arboreality at a higher rate than those with toepads, and high rates of invasion of arboreal niches by nonarboreal padbearing lineages provide further evidence that toepads may be a key to unlocking evolutionary access to the arboreal zone. Our results and analytical framework provide novel insights to understand and evaluate the ecological and evolutionary consequences of key innovations.[Arboreality; ecological transition; key innovation; macroevolution; phylogenetic comparative methods.]},
   journal={Molecular Phylogenetics and Evolution},
-  pages={107548},
+  volume={71},
+  number={1},
+  pages={139--152},
   year={2022},
+  html={https://www.sciencedirect.com/science/article/pii/S1055790322001610},
+  impactfactor={15.683},
   publisher={Elsevier}
 }
