--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -147,3 +147,12 @@
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
   year={2022},
 }
+
+@article{reynolds2022phylogenomics,
+  title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas (genus Cyclura)},
+  author={Reynolds, R Graham and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, Charles R and Welch, Mark E and Colosimo, Giuliano and Gerber, Glenn P and Drawert, Brian and Iverson, John B},
+  journal={Molecular Phylogenetics and Evolution},
+  pages={107548},
+  year={2022},
+  publisher={Elsevier}
+}
