--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -150,9 +150,11 @@
 
 @article{reynolds2022phylogenomics,
   title={Phylogenomics and Historical Biogeography of West Indian Rock Iguanas (genus Cyclura)},
+  abbr={MP&E},
   author={Reynolds, R Graham and Miller, Aryeh H and Pasachnik, Stesha A and Knapp, Charles R and Welch, Mark E and Colosimo, Giuliano and Gerber, Glenn P and Drawert, Brian and Iverson, John B},
   journal={Molecular Phylogenetics and Evolution},
   pages={107548},
   year={2022},
+  html={https://www.sciencedirect.com/science/article/pii/S1055790322001610},
   publisher={Elsevier}
 }
