--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -76,6 +76,7 @@
 
 @article{freitas2020taxonomic,
   title={A taxonomic conundrum: Characterizing a cryptic radiation of Asian gracile skinks (Squamata: Scincidae: Riopa) in Myanmar},
+  abbr={MP&E},
   author={Freitas, Elyse S and Miller, Aryeh H and Reynolds, R Graham and Siler, Cameron D},
   abstract={Recognizing species-level diversity is important for studying evolutionary patterns across biological disciplines and is critical for conservation efforts. However, challenges remain in delimiting species-level diversity, especially in cryptic radiations where species are genetically divergent but show little morphological differentiation. Using multilocus molecular data, phylogenetic analyses, species delimitation analyses, and morphological data, we examine lineage diversification in a cryptic radiation of Riopa skinks in Myanmar. Four species of Riopa skinks are currently recognized from Myanmar based on morphological traits, but the boundaries between three of these species, R. anguina, R. lineolata, and R. popae, are not well-defined. We find high levels of genetic diversity within these three species. Our analyses suggest that they may comprise as many as 12 independently evolving lineages, highlighting the extent to which species diversity in the region is underestimated. However, quantitative trait data suggest that these lineages have not differentiated morphologically, possibly indicating that this cryptic radiation represents non-adaptive evolution, although additional data is needed to corroborate this.},
   journal={Molecular phylogenetics and evolution},
@@ -87,6 +88,7 @@
 
 @article{mulcahy2017troublesome,
   title={Troublesome trimes: potential cryptic speciation of the Trimeresurus (Popeia) popeiorum complex (Serpentes: Crotalidae) around the Isthmus of Kra (Myanmar and Thailand)},
+  abbr={Zootaxa},
   author={Mulcahy, Daniel G and Lee, Justin L and Miller, Aryeh H and Zug, George R},
   abstract={The taxonomic identity of the Trimeresurus (Popeia) popeiorum complex from the Isthmus of Kra and to the north was investigated. Several studies over the last decade have produced several specimens and associated mtDNA sequence data for a variety of individuals of the T. popeiorum and “T. sabahi” complexes. Here, we combine four mitochondrial genes (12S, 16S, ND4, and CytB) from all available specimens in GenBank with the addition of five new specimens collected from the mainland, Tanintharyi Region of Myanmar. Maximum Likelihood and Bayesian analyses identified that T. popeiorum sensu lato is paraphyletic with two geographically distinct clades: a northern clade representing populations from northern Myanmar, Laos and northern Thailand and a southern clade representing samples from the Tanintharyi Region and adjacent west Thailand. While the two clades have considerable genetic distance, they appear to be morphologically identical, leading to the hypothesis that the southern clade represents a cryptic, undescribed species. Because they appear to be cryptic species and the limitation of only five specimens from the southern lineage, this does not permit us to formally describe the new species. In accordance to past molecular studies, we uncovered paraphyly and lack of genetic support for the validity of taxa within the T. sabahi complex. However, we suggest recognizing these populations as subspecies within T. sabahi.},
   journal={Zootaxa},
@@ -108,6 +110,7 @@
 
 @article{reynolds2021molecular,
   title={Molecular phylogeny of Puerto Rico Bank dwarf geckos (Squamata: Sphaerodactylidae: Sphaerodactylus)},
+  abbr={bioRxiv},
   author={Reynolds, Robert G and Miller, Aryeh H and Revell, Liam J and RIOS-FRANCESCHI, ALEJANDRO and Huffine, Clair A and Fredette, Jason and Angeli, Nicole F and VEGA-CASTILLO, Sondra I and Puente-Rol{\'o}n, Alberto R},
   journal={bioRxiv},
   year={2021},
@@ -116,6 +119,7 @@
 
 @article{miller2021phylogeny,
   title={Phylogeny, Diversity, and Distribution of Micryletta (Anura: Microhylidae) in Myanmar},
+  abbr={Ichthyology \& Herpetology},
   author={Miller, Aryeh H and Zug, George R and Wogan, Guinevere OU and Lee, Justin L and Mulcahy, Daniel G},
   abstract={The microhylid genus Micryletta, often called Paddy Frogs, is a taxonomically modest group of frogs currently comprised of eight species distributed across India, China, and Southeast Asia. None of the recent investigations into this group have explicitly focused on the diversity of these frogs in Myanmar, a critically undersampled region previously thought to contain only one species of Micryletta, M. inornata. Recent field expeditions to Myanmar conducted by the authors have resulted in the discovery of numerous populations of Micryletta in the northern and southern portions of the country in Kachin State and Tanintharyi Region, respectively. In this study, we investigate the status of these populations, their taxonomic identities, and broadly assess the diversity of this enigmatic group of frogs in Myanmar. Using comparative morphological and molecular data, we find the diversity of Micryletta in Myanmar has been poorly appreciated, which we demonstrate with the discovery of M. aishani, a species previously only known from neighboring India, and M. lineata, a species originally described from Peninsular Thailand. Our investigation into the taxonomic status of M. lineata demonstrates the validity in the recognition of this species, which is supported with evidence derived from morphology, geography, and molecular data. We additionally provide a detailed re-description of this species based on novel specimens from southern Myanmar. We also document M. inornata sensu stricto in Myanmar, sympatric with M. lineata, bringing the total to three species of Micryletta occurring in Myanmar.},
   journal={Ichthyology \& Herpetology},
@@ -153,7 +157,7 @@
 }
 
 @article{millerKIs,
-  abbr={In review},
+  abbr={In revision},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
   year={2022},
