--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -156,6 +156,21 @@
   publisher={Elsevier}
 }
 
+@article{Vanerelli2022,
+author = {Vanerelli, Alyssa A and Miller, Aryeh H and Comsa, L Caden and Geneva, Anthony J and Reynolds, R Graham},
+doi = {10.1080/23802359.2022.2089067},
+issn = {null},
+journal = {Mitochondrial DNA Part B},
+month = {jun},
+number = {6},
+pages = {1180--1182},
+publisher = {Taylor & Francis},
+title = {{Mitochondrial genome of the critically Endangered silver boa (Chilabothrus argentum; Squamata: Boidae)}},
+html = {https://doi.org/10.1080/23802359.2022.2089067},
+volume = {7},
+year = {2022}
+}
+
 @article{millerKIs,
   abbr={In revision},
   title={The ecology and evolution of key innovations},
