--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -139,7 +139,6 @@
 
 @article{miller2021phylogeny,
   title={Phylogeny, Diversity, and Distribution of Micryletta (Anura: Microhylidae) in Myanmar},
-  abbr={Ichthyology \& Herpetology},
   author={Miller, Aryeh H and Zug, George R and Wogan, Guinevere OU and Lee, Justin L and Mulcahy, Daniel G},
   abstract={The microhylid genus Micryletta, often called Paddy Frogs, is a taxonomically modest group of frogs currently comprised of eight species distributed across India, China, and Southeast Asia. None of the recent investigations into this group have explicitly focused on the diversity of these frogs in Myanmar, a critically undersampled region previously thought to contain only one species of Micryletta, M. inornata. Recent field expeditions to Myanmar conducted by the authors have resulted in the discovery of numerous populations of Micryletta in the northern and southern portions of the country in Kachin State and Tanintharyi Region, respectively. In this study, we investigate the status of these populations, their taxonomic identities, and broadly assess the diversity of this enigmatic group of frogs in Myanmar. Using comparative morphological and molecular data, we find the diversity of Micryletta in Myanmar has been poorly appreciated, which we demonstrate with the discovery of M. aishani, a species previously only known from neighboring India, and M. lineata, a species originally described from Peninsular Thailand. Our investigation into the taxonomic status of M. lineata demonstrates the validity in the recognition of this species, which is supported with evidence derived from morphology, geography, and molecular data. We additionally provide a detailed re-description of this species based on novel specimens from southern Myanmar. We also document M. inornata sensu stricto in Myanmar, sympatric with M. lineata, bringing the total to three species of Micryletta occurring in Myanmar.},
   journal={Ichthyology \& Herpetology},
@@ -196,6 +195,6 @@ year = {2022}
   abbr={In revision},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
-  year={2022},
+  year={2022}
 }
 
