--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -192,7 +192,8 @@ year = {2022}
 }
 
 @article{millerKIs,
-  abbr={In revision},
+  abbr={Accepted},
+  journal = {Trends in Ecology and Evolution},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
   year={2022}
