--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   pages={796--808},
   year={2020},
   publisher={The American Society of Ichthyologists and Herpetologists},
+  url={https://doi.org/10.1643/CH2020060},
   html={https://bioone.org/journals/copeia/volume-108/issue-4/CH2020060/Discovery-of-a-New-Species-of-Enigmatic-Odd-Scaled-Snake/10.1643/CH2020060.full},
   pdf={https://bioone.org/journalArticle/Download?urlId=10.1643%2FCH2020060},
   selected={true}
@@ -25,7 +26,6 @@
   number={1},
   pages={19--35},
   year={2018},
-  html={https://bioone.org/journals/proceedings-of-the-biological-society-of-washington/volume-131/issue-1/17-00025/Rediscovery-of-Xenochrophis-bellulus-Stoliczka-1871-from-Myanmar-Serpentes/10.2988/17-00025.full},
   publisher={Biological Society of Washington}
 }
 
@@ -49,7 +49,6 @@
   number={1},
   pages={173--194},
   year={2016},
-  html={https://bioone.org/journals/proceedings-of-the-biological-society-of-washington/volume-129/issue-1/0006-324X-129.Q2.173/Morphology-and-biology-of-the-Asian-Common-Mockviper-Psammodynastes-pulverulentus/10.2988/0006-324X-129.Q2.173.short},
   publisher={Biological Society of Washington}
 }
 
@@ -61,7 +60,6 @@
   number={757},
   pages={85},
   year={2018},
-  html={https://zookeys.pensoft.net/article/24453/},
   publisher={Pensoft Publishers}
 }
 
@@ -73,21 +71,7 @@
   volume={4661},
   number={1},
   pages={40--64},
-  html={https://www.biotaxa.org/Zootaxa/article/view/zootaxa.4661.1.2},
   year={2019}
-}
-
-@article{miller2019complete,
-  title={The complete mitochondrial genome of the critically endangered Lesser Antillean iguana (Iguana delicatissima; Squamata: Iguanidae)},
-  author={Miller, Aryeh H and C. Jackson, Anna and van den Burg, Matthijs P and Knapp, Charles R and Welch, Mark E and Reynolds, R Graham},
-  abstract={The Lesser Antillean iguana, Iguana delicatissima Laurenti 1768, is one of the most endangered vertebrate taxa in the West Indies. This species faces significant threats, including introgressive hybridization with the introduced congener Iguana iguana. We deploy a combination of off-target sequence capture obtained from Illumina® reads and targeted Sanger reads to assemble the mitochondrial genome of I. delicatissima. The mitogenome is 16,616 bp in length and is comprised of 13 protein-coding genes, two ribosomal subunits (rRNAs), 22 transfer RNAs, and a control region. Gene order is identical to that of congener I. iguana and other closely related taxa, absent of any tandem repeat regions. We show the phylogenetic utility of the mitogenome with a maximum-likelihood analysis, which yields a topology concordant with previous studies of iguanine taxa. We are hopeful that this genomic resource will be useful in further informing applied conservation and management for this critically endangered species.},
-  journal={Mitochondrial DNA Part B},
-  volume={4},
-  number={2},
-  pages={2479--2481},
-  year={2019},
-  html={https://www.tandfonline.com/doi/full/10.1080/23802359.2019.1637789},
-  publisher={Taylor \& Francis}
 }
 
 @article{freitas2020taxonomic,
@@ -99,7 +83,6 @@
   volume={146},
   pages={106754},
   year={2020},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S1055790320300269?via%3Dihub},
   publisher={Elsevier}
 }
 
@@ -112,7 +95,6 @@
   volume={4347},
   number={2},
   pages={301--315},
-  html={https://www.mapress.com/zt/article/view/zootaxa.4347.2.6},
   year={2017}
 }
 
@@ -132,13 +114,12 @@
   author={Reynolds, Robert G and Miller, Aryeh H and Revell, Liam J and RIOS-FRANCESCHI, ALEJANDRO and Huffine, Clair A and Fredette, Jason and Angeli, Nicole F and VEGA-CASTILLO, Sondra I and Puente-Rol{\'o}n, Alberto R},
   journal={bioRxiv},
   year={2021},
-  html={https://www.biorxiv.org/content/10.1101/2021.03.23.436310v1},
-  abstract={The genus Sphaerodactylus is a very species-rich assemblage of sphaerodactylid lizards that has undergone a level of speciation in parallel to that of the well-known Anolis lizards. Nevertheless, molecular phylogenetic research on this group consists of a handful of smaller studies of regional focus (e.g., western Puerto Rico, the Lesser Antilles) or large-scale analyses based on relatively limited sequence data. Few medium-scale multi-locus studies exist— for example, studies that encompass an entire radiation on an island group. Building upon previous work done in Puerto Rican Sphaerodactylus, we performed multi-locus sampling of Sphaerodactylus geckos from across the Puerto Rico Bank. We then used these data for phylogeny estimation with near-complete taxon sampling. We focused on sampling the widespread nominal species S. macrolepis and in so doing, we uncovered a highly divergent and morphologically distinct lineage of Sphaerodactylus macrolepis from Puerto Rico, Culebra, and Vieques islands, which we recognize as S. grandisquamis (Stejneger, 1904) on the basis of molecular and morphological characters. S. grandisquamis co-occurs with S. macrolepis only on Culebra Island but is highly genetically differentiated and morphologically distinct. Sphaerodactylus macrolepis is now restricted to the eastern Puerto Rico Bank, from Culebra east through the Virgin Islands and including the topotypic population on St. Croix. We include additional discussion of the evolutionary history and historical biogeography of the Sphaerodactylus of the Puerto Rican Bank in the context of these new discoveries.},
   publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{miller2021phylogeny,
   title={Phylogeny, Diversity, and Distribution of Micryletta (Anura: Microhylidae) in Myanmar},
+  abbr={Ichthyology \& Herpetology},
   author={Miller, Aryeh H and Zug, George R and Wogan, Guinevere OU and Lee, Justin L and Mulcahy, Daniel G},
   abstract={The microhylid genus Micryletta, often called Paddy Frogs, is a taxonomically modest group of frogs currently comprised of eight species distributed across India, China, and Southeast Asia. None of the recent investigations into this group have explicitly focused on the diversity of these frogs in Myanmar, a critically undersampled region previously thought to contain only one species of Micryletta, M. inornata. Recent field expeditions to Myanmar conducted by the authors have resulted in the discovery of numerous populations of Micryletta in the northern and southern portions of the country in Kachin State and Tanintharyi Region, respectively. In this study, we investigate the status of these populations, their taxonomic identities, and broadly assess the diversity of this enigmatic group of frogs in Myanmar. Using comparative morphological and molecular data, we find the diversity of Micryletta in Myanmar has been poorly appreciated, which we demonstrate with the discovery of M. aishani, a species previously only known from neighboring India, and M. lineata, a species originally described from Peninsular Thailand. Our investigation into the taxonomic status of M. lineata demonstrates the validity in the recognition of this species, which is supported with evidence derived from morphology, geography, and molecular data. We additionally provide a detailed re-description of this species based on novel specimens from southern Myanmar. We also document M. inornata sensu stricto in Myanmar, sympatric with M. lineata, bringing the total to three species of Micryletta occurring in Myanmar.},
   journal={Ichthyology \& Herpetology},
@@ -146,7 +127,6 @@
   number={1},
   pages={245--257},
   year={2021},
-  html={https://bioone.org/journals/ichthyology-and-herpetology/volume-109/issue-1/h2020100/Phylogeny-Diversity-and-Distribution-of-Micryletta-Anura--Microhylidae-in/10.1643/h2020100.full},
   publisher={The American Society of Ichthyologists and Herpetologists}
 }
 
@@ -192,10 +172,8 @@ year = {2022}
 }
 
 @article{millerKIs,
-  abbr={Accepted},
-  journal = {Trends in Ecology and Evolution},
+  abbr={In revision},
   title={The ecology and evolution of key innovations},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
-  year={2022}
+  year={2022},
 }
-
